--- a/src/main/resources/templates/members/login.html
+++ b/src/main/resources/templates/members/login.html
@@ -86,6 +86,10 @@
             if (successMessage) {
                 alert(successMessage);
             }
+            const urlParams = new URLSearchParams(window.location.search);
+            if (urlParams.has('error')) {
+                alert('이메일과 비밀번호를 확인해주세요.');
+            }
         };
     </script>
 </head>
@@ -108,17 +112,16 @@
             <button type="button" class="btn btn-primary" onclick="location.href='/members/new'">회원가입</button>
                     <input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}">
             <br>
-            <!--<a href="/oauth2/authorization/google">
-                <img src="/css/images/google.png" alt="구글로그인">
+            <a href="/oauth2/authorization/google">
+                <img src="/images/google.png" alt="구글로그인">
             </a>
             <a href="/oauth2/authorization/kakao">
-                <img src="/css/images/kakao.png" width="40px" height="40px" alt="카카오로그인">
+                <img src="/images/kakao.png" width="40px" height="40px" alt="카카오로그인">
             </a>
-            <a href="/oauth2/authorization/naver">
+            <!--<a href="/oauth2/authorization/naver">
                 <img src="/css/images/naver.png" width="40px" height="40px" alt="네이버로그인">
             </a>-->
         </form>
-
 
     </div>
 </div>
