--- a/src/main/resources/static/css/layout1.css
+++ b/src/main/resources/static/css/layout1.css
@@ -4,17 +4,16 @@
     height:100%;
     margin: 0;
     background-color : #1f1f1f;
-
     }
-
-    .content{
+     .content{
        margin-top : 50px;
-       padding-left : 200px;
-       padding-right : 200px;
-       padding-bottom:50px;
+       margin-left : 200px;
+       margin-right : 200px;
+       margin-bottom:50px;
        height : auto;
          min-height: 100%;
-    }
+        }
+
 
    .footer{
    width:100%;
