10/25 댓글 버그 수정

--- a/src/main/resources/templates/members/login.html
+++ b/src/main/resources/templates/members/login.html
@@ -90,6 +90,10 @@
             if (urlParams.has('error')) {
                 alert('이메일과 비밀번호를 확인해주세요.');
             }
+            if (urlParams.has('error')) {
+                alert('이미 가입된 이메일입니다..');
+            }
+
         };
     </script>
 </head>
